# sovereign-lite

./: .gitignore  Cargo.toml  Dockerfile  README.md  claude-bot.js  fly.toml  package-lock.json  package.json  protocol-test.js
docs/: index.html
relay-deno/: deno.json  main.ts
src/: lib.rs
src/contract/: mod.rs
src/crypto/: cipher.rs  error.rs  exchange.rs  hash.rs  identity.rs  mod.rs
src/session/: mod.rs  ratchet.rs
src/transport/: mod.rs  websocket.rs
